grafana/base/deployment.yml
---
kind: "Deployment"
apiVersion: "apps/v1"
metadata:
  name: "grafana"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "grafana"
  strategy:
    type: "RollingUpdate"
  template:
    metadata:
      labels:
        app: "grafana"
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: "grafana"
          image: "grafana/grafana:9.2.4"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 3000
              name: "http-grafana"
              protocol: "TCP"
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: "/robots.txt"
              port: 3000
              scheme: "HTTP"
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            requests:
              cpu: "250m"
              memory: "250Mi"
