grafana/base/service.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "grafana"
spec:
  ports:
    - port: 3000
      protocol: "TCP"
  selector:
    app: "grafana"
