grafana/base/ingress.yml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "grafana-ingress"
spec:
  rules:
    - host: "grafana.k3s.home"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "grafana"
                port:
                  number: 3000
